Bug-6556 code changes to fix spacing issue between search button in  mobile view

--- a/src/app/components/search-box/search-box.component.scss
+++ b/src/app/components/search-box/search-box.component.scss
@@ -24,4 +24,9 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .search-button {
   max-height: 1.85em;
+  margin-bottom: 0;
+}
+.search-custom
+{
+  margin-bottom: 10px;
 }
